.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glfstmplt8__c.object
<CustomObject>
    <description>glfstmplt8__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glfstmplt8_glfstmplt7__r.Name &amp; &apos;_&apos; &amp;  TEXT( rstkf__glfstmplt8_seq__c )</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glfstmplt8_glfstmplt7__r.Name &amp; &apos;-&apos; &amp; TEXT( rstkf__glfstmplt8_seq__c )</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt8_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Financial Company for which the stated accounts pertain</inlineHelpText>
        <label>Company for Accounts</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipName>glfstmplt8s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt8_command__c</fullName>
        <inlineHelpText>Select the action being taken.  Options are

Add an Account
Subtract an Account
Add an Account Range
Subtract an Account Range</inlineHelpText>
        <label>Account Command</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add an Account</fullName>
                    <default>true</default>
                    <label>Add an Account</label>
                </value>
                <value>
                    <fullName>Subtract an Account</fullName>
                </value>
                <value>
                    <fullName>Add an Account Range</fullName>
                </value>
                <value>
                    <fullName>Subtract an Account Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt8_glacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When adding or subtracting an account, enter the desired account that will be read for data</inlineHelpText>
        <label>Account Number</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipName>glfstmplt8s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt8_glfstmplt7__c</fullName>
        <label>Reporting Account Group Header</label>
        <referenceTo>rstkf__glfstmplt7__c</referenceTo>
        <relationshipLabel>Reporting Account Group Lines</relationshipLabel>
        <relationshipName>glfstmplt8s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt8_rangeend__c</fullName>
        <inlineHelpText>When adding or subtracting an account range, enter the ending account for that range</inlineHelpText>
        <label>End of Account Range</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt8_rangestart__c</fullName>
        <inlineHelpText>When adding or subtracting an account range, enter the starting account for that range</inlineHelpText>
        <label>Start of Account Range</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt8_seq__c</fullName>
        <inlineHelpText>User-defined sequence number, unique to this Account Group (up to 4 characters in length) representing the order in which this Account is executed</inlineHelpText>
        <label>Account Sequence #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Reporting Account Group Lines</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Predefined_Subline_Group_Lines</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfstmplt8_glfstmplt7__c</columns>
        <columns>rstkf__glfstmplt8_cmpno__c</columns>
        <columns>rstkf__glfstmplt8_command__c</columns>
        <columns>rstkf__glfstmplt8_seq__c</columns>
        <columns>rstkf__glfstmplt8_rangestart__c</columns>
        <columns>rstkf__glfstmplt8_rangeend__c</columns>
        <columns>rstkf__glfstmplt8_glacct__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Predefined Subline Group Lines</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Account Group Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstkf__sublinesequenceisreqandnotmodified</fullName>
        <active>true</active>
        <description>Subline Sequence # is required and cannot be modified.</description>
        <errorConditionFormula>ISBLANK(rstkf__glfstmplt8_seq__c)||(!ISNEW()&amp;&amp; ISCHANGED(rstkf__glfstmplt8_seq__c))</errorConditionFormula>
        <errorMessage>Subline Sequence # is required and cannot be modified.</errorMessage>
    </validationRules>
</CustomObject>